fix jump links

--- a/style.css
+++ b/style.css
@@ -73,28 +73,20 @@ html {
     margin-top: 15px;
 }
 
-.scripts-list li{
+.scripts-list .jump-link{
+    color: #263238;
+    display: block;
     padding: 10px 15px;
+    text-decoration: none;
     font-size: 13px;
     letter-spacing: 0.1rem;
     cursor: pointer;
-    width: 100%;
 }
 
-.scripts-list li a {
-    color: #263238;
-    text-decoration: none;
-    display: block;
-}
-
-.scripts-list li:hover a{
-    transition: all 0.1s;
-    color: white;
-}
-
-.scripts-list li:hover{
-    transition: all 0.1s;
+.scripts-list .jump-link:hover{
     background-color: #263238;
+    color: white;
+    transition: all 0.2s;
 }
 
 /* detail container */
@@ -108,8 +100,7 @@ html {
 }
 
 .content-div{
-    padding: 20px;
-    margin: 20px 0px;
+    padding: 60px 20px 20px 20px;
 }
 
 .content-div h3{
